lib/src/compiler/tests/testdata/errors/120.out
error[E024]: invalid pattern `$a`
 --> line:3:10
  |
3 |     $a = ""
  |          ^^ this pattern is too short
  |